# novi

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  novi.py
novi/: Cargo.toml
novi-core/: Cargo.toml
novi-core/migrations/: 20240308163249_init.sql  20240318030126_remove_unused_module.sql
novi-core/sql/: infer_tags.sql  infer_tags_empty.sql
novi-core/src/: client.rs  config.rs  dispatch.rs  error.rs  filter.rs  hook.rs  image.rs  ipc.rs  lib.rs  lock.rs  log.rs  misc.rs  model.rs  object.rs  plugin.rs  py.rs  query.rs  rpc.rs  rule.rs  session.rs  tag.rs  tag_search.rs  user.rs  vector.rs
novi-core/src/ipc/: client.rs  server.rs
novi-core/src/rpc/: client.rs  server.rs
novi/src/: main.rs
proto/: novi.proto
src/: config.rs  error.rs  filter.rs  function.rs  hook.rs  identity.rs  ipfs.rs  main.rs  misc.rs  model.rs  novi.rs  object.rs  proto.rs  query.rs  rpc.rs  session.rs  subscribe.rs  tag.rs  token.rs  user.rs
src/plugins/: files.rs  group.rs  implies.rs  mod.rs  users.rs
src/storage/: dir.rs  ipfs.rs  mod.rs
