[package]
name = "novi-core"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
argon2 = "0.5.2"
async-trait = "0.1.77"
chrono = { version = "0.4.31", features = ["serde"] }
colored = "2.1.0"
dashmap = "5.5.3"
futures-util = "0.3.30"
image = "0.24.7"
interprocess = { version = "1.2.1", features = ["tokio_support"] }
jieba-rs = "0.6.8"
libc = "0.2.153"
moka = { version = "0.12.1", features = ["future"] }
ndarray = "0.15.6"
nom = "7.1.3"
once_cell = "1.18.0"
ort = { version = "2.0.0-alpha.4", features = ["load-dynamic"] }
os_pipe = "1.1.5"
pollster = "0.3.0"
postcard = { version = "1.0.8", features = ["use-std"] }
pyo3 = { version = "0.20.3", features = ["auto-initialize", "chrono"] }
pyo3-asyncio = { version = "0.20.0", features = ["attributes", "tokio-runtime"] }
pyo3-ffi = "0.20.3"
safetensors = "0.4.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.32"
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
